samples/_failures_safe/1761148306_a5a1be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bcc7779f.c: In function ‘main’:
./samples/SAFE/__tmp_bcc7779f.c:165: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_bcc7779f.c:164:5: error: expected declaration or statement at end of input
  164 |     if
      |     ^~
